[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = '-vv --color=yes'
log_cli = true
xfail_strict=true

[tool.black]
exclude = '/build|_pb2\.pyi?$'
color = true
diff = true
verbose = true

[tool.pyright]
exclude = ['**/*_pb2.py*']
