[metadata]
name = foxglove-websocket
version = 0.1.4
description = Foxglove WebSocket server (deprecated in favor of foxglove-sdk)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = foxglove, websocket, robotics, ros, ros2
license = MIT
url = https://github.com/foxglove/ws-protocol
project_urls =
    GitHub Issues = https://github.com/foxglove/ws-protocol/issues
    Foxglove Documentation = https://docs.foxglove.dev/
classifiers =
    Development Status :: 7 - Inactive
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    websockets

[options.extras_require]
examples = protobuf>=4; pyquaternion; foxglove-schemas-protobuf

[options.packages.find]
where = src
